--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,2 +1,9 @@
+# Enter your local postgres server credentials
+DB_USER=postgres
+DB_PASSWORD=password
+
+DB_NAME=kanban
+
+DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@localhost:5432/${DB_NAME}"
+
 SERVER_PORT=3000
-DATABASE_URL="postgresql://postgres:amitc@localhost:5432/kanban"
