--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
-DB_USER=postgres
-DB_PASSWORD=example
+# Change only if you want to log into docker postgres console
+DB_USER=user
+DB_PASSWORD=password
 DB_NAME=kanban
 DB_PORT=5432
 
-# DATABASE_URL="postgresql://postgres:amitc@localhost:5432/postgres"
-
-DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@0.0.0.0:${DB_PORT}/${DB_NAME}"
+DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}"
 
 SERVER_PORT=3000
-
-APP_PORT=5173
