fixed ports of docker compose

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,6 +1,19 @@
-# Enter your local postgres server credentials
-DB_USER=postgres
+# -------------------------- Docker ------------------------------------
+# [IMPORTANT]: Do not edit this env example for Docker
+# Copy this if you are running the postgres server as a docker container.
+DB_USER=user
 DB_PASSWORD=password
+DB_NAME=kanban
+
+DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@host.docker.internal:5433/${DB_NAME}
+
+SERVER_PORT=3000
+
+# ----------------------- Local PostgreSQL ---------------------------
+# [IMPORTANT] Use this env example if you are running postgres locally.
+# Enter your local postgres server credentials.
+DB_USER=<YOUR_POSTGRES_USERNAME>
+DB_PASSWORD=<YOUR_POSTGRES_PASSWORD>
 
 DB_NAME=kanban
 
